chore: streamline test data generation process

--- a/make_test_data.ipynb
+++ b/make_test_data.ipynb
@@ -16,7 +16,32 @@
     "import os\n",
     "import pathlib\n",
     "\n",
-    "import erlab\n"
+    "import erlab\n",
+    "import xarray as xr\n",
+    "\n",
+    "\n",
+    "def save_compressed(data: xr.DataArray | xr.Dataset | xr.DataTree, path: os.PathLike):\n",
+    "    if isinstance(data, xr.DataArray):\n",
+    "        data.to_netcdf(\n",
+    "            path,\n",
+    "            encoding={\n",
+    "                var: {\"compression\": \"gzip\", \"compression_opts\": 9}\n",
+    "                for var in list(data.coords.keys())\n",
+    "                + [data.name if data.name else \"__xarray_dataarray_variable__\"]\n",
+    "            },\n",
+    "            engine=\"h5netcdf\",\n",
+    "            invalid_netcdf=True,\n",
+    "        )\n",
+    "    elif isinstance(data, xr.Dataset):\n",
+    "        data.to_netcdf(\n",
+    "            path,\n",
+    "            encoding={\n",
+    "                var: {\"compression\": \"gzip\", \"compression_opts\": 9}\n",
+    "                for var in data.data_vars\n",
+    "            },\n",
+    "        )\n",
+    "    else:\n",
+    "        data.to_netcdf(path, engine=\"h5netcdf\")"
    ]
   },
   {
@@ -40,15 +65,7 @@
     "for f in files:\n",
     "    new_file = (data_dir / \"expected\" / f.name).with_suffix(\".h5\")\n",
     "    data = erlab.io.load(f)\n",
-    "    data.to_netcdf(\n",
-    "        new_file,\n",
-    "        encoding={\n",
-    "            var: {\"compression\": \"gzip\", \"compression_opts\": 9}\n",
-    "            for var in list(data.coords.keys()) + [data.name]\n",
-    "        },\n",
-    "        engine=\"h5netcdf\",\n",
-    "        invalid_netcdf=True,\n",
-    "    )"
+    "    save_compressed(data, new_file)"
    ]
   },
   {
@@ -64,10 +81,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pathlib\n",
-    "\n",
-    "import erlab\n",
-    "\n",
     "data_dir = pathlib.Path(\"./hers\")\n",
     "files = erlab.io.utils.get_files(data_dir, extensions=(\".fits\",))\n",
     "\n",
@@ -77,15 +90,7 @@
     "for f in files:\n",
     "    new_file = (data_dir / \"expected\" / f.name).with_suffix(\".h5\")\n",
     "    data = erlab.io.load(f)\n",
-    "    data.to_netcdf(\n",
-    "        new_file,\n",
-    "        encoding={\n",
-    "            var: {\"compression\": \"gzip\", \"compression_opts\": 9}\n",
-    "            for var in list(data.coords.keys()) + [data.name]\n",
-    "        },\n",
-    "        engine=\"h5netcdf\",\n",
-    "        invalid_netcdf=True,\n",
-    "    )"
+    "    save_compressed(data, new_file)"
    ]
   },
   {
@@ -114,15 +119,7 @@
     "for f in files:\n",
     "    new_file = (data_dir / \"expected\" / f.name).with_suffix(\".h5\")\n",
     "    data = erlab.io.load(f)\n",
-    "    data.to_netcdf(\n",
-    "        new_file,\n",
-    "        encoding={\n",
-    "            var: {\"compression\": \"gzip\", \"compression_opts\": 9}\n",
-    "            for var in list(data.coords.keys()) + [data.name]\n",
-    "        },\n",
-    "        engine=\"h5netcdf\",\n",
-    "        invalid_netcdf=True,\n",
-    "    )"
+    "    save_compressed(data, new_file)"
    ]
   },
   {
@@ -143,16 +140,7 @@
     "erlab.io.set_data_dir(data_dir)\n",
     "data = erlab.io.load(25)\n",
     "\n",
-    "\n",
-    "data.to_netcdf(\n",
-    "    data_dir / \"expected\" / \"Sample0025.h5\",\n",
-    "    encoding={\n",
-    "        var: {\"compression\": \"gzip\", \"compression_opts\": 9}\n",
-    "        for var in list(data.coords.keys())\n",
-    "        + [data.name if data.name else \"__xarray_dataarray_variable__\"]\n",
-    "    },\n",
-    "    engine=\"h5netcdf\",\n",
-    ")\n"
+    "save_compressed(data, data_dir / \"expected\" / \"Sample0025.h5\")"
    ]
   },
   {
@@ -180,15 +168,7 @@
     "    )\n",
     "\n",
     "    data = erlab.io.load(os.path.join(data_dir, f))\n",
-    "\n",
-    "    data.to_netcdf(\n",
-    "        os.path.join(data_dir, \"expected\", new_name),\n",
-    "        encoding={\n",
-    "            var: {\"compression\": \"gzip\", \"compression_opts\": 9}\n",
-    "            for var in list(data.coords.keys()) + [\"__xarray_dataarray_variable__\"]\n",
-    "        },\n",
-    "        engine=\"h5netcdf\",\n",
-    "    )\n"
+    "    save_compressed(data, os.path.join(data_dir, \"expected\", new_name))"
    ]
   },
   {
@@ -220,15 +200,7 @@
     "    )\n",
     "\n",
     "    data = erlab.io.load(os.path.join(data_dir, f))\n",
-    "\n",
-    "    data.to_netcdf(\n",
-    "        os.path.join(data_dir, \"expected\", new_name),\n",
-    "        encoding={\n",
-    "            var: {\"compression\": \"gzip\", \"compression_opts\": 9}\n",
-    "            for var in list(data.coords.keys()) + [\"__xarray_dataarray_variable__\"]\n",
-    "        },\n",
-    "        engine=\"h5netcdf\",\n",
-    "    )\n"
+    "    save_compressed(data, os.path.join(data_dir, \"expected\", new_name))"
    ]
   },
   {
@@ -250,15 +222,7 @@
     "erlab.io.set_data_dir(data_dir)\n",
     "\n",
     "data = erlab.io.load(1)\n",
-    "data.to_netcdf(\n",
-    "    os.path.join(data_dir, \"expected\", \"20241026_00001.h5\"),\n",
-    "    encoding={\n",
-    "        var: {\"compression\": \"gzip\", \"compression_opts\": 9}\n",
-    "        for var in list(data.coords.keys())\n",
-    "        + [data.name if data.name else \"__xarray_dataarray_variable__\"]\n",
-    "    },\n",
-    "    engine=\"h5netcdf\",\n",
-    ")\n"
+    "save_compressed(data, os.path.join(data_dir, \"expected\", \"20241026_00001.h5\"))"
    ]
   },
   {
@@ -293,15 +257,7 @@
     "\n",
     "for old, new in files:\n",
     "    data = erlab.io.load(old)\n",
-    "    data.to_netcdf(\n",
-    "        os.path.join(data_dir, \"expected\", new),\n",
-    "        encoding={\n",
-    "            var: {\"compression\": \"gzip\", \"compression_opts\": 9}\n",
-    "            for var in list(data.coords.keys())\n",
-    "            + [data.name if data.name else \"__xarray_dataarray_variable__\"]\n",
-    "        },\n",
-    "        engine=\"h5netcdf\",\n",
-    "    )\n"
+    "    save_compressed(data, os.path.join(data_dir, \"expected\", new))"
    ]
   },
   {
@@ -328,16 +284,7 @@
     "for fn in fnames:\n",
     "    new_name = os.path.splitext(fn)[0] + \".h5\"\n",
     "    data = erlab.io.load(fn)\n",
-    "    data.to_netcdf(\n",
-    "        os.path.join(data_dir, \"expected\", new_name),\n",
-    "        encoding={\n",
-    "            var: {\"compression\": \"gzip\", \"compression_opts\": 9}\n",
-    "            for var in list(data.coords.keys())\n",
-    "            + [data.name if data.name else \"__xarray_dataarray_variable__\"]\n",
-    "        },\n",
-    "        engine=\"h5netcdf\",\n",
-    "        invalid_netcdf=True,\n",
-    "    )\n"
+    "    save_compressed(data, os.path.join(data_dir, \"expected\", new_name))"
    ]
   },
   {
@@ -353,20 +300,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.attrs['data_type']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pathlib\n",
-    "\n",
-    "import erlab\n",
-    "import xarray as xr\n",
-    "\n",
     "data_dir = pathlib.Path(\"./erpes\")\n",
     "\n",
     "# files = erlab.io.utils.get_files(data_dir, extensions=(\".pxt\", \".ibw\", \".zip\"))\n",
@@ -376,27 +309,7 @@
     "for idx in (6,):\n",
     "    new_file = (data_dir / \"expected\" / str(idx)).with_suffix(\".h5\")\n",
     "    data = erlab.io.load(idx, data_dir=data_dir)\n",
-    "    if isinstance(data, xr.DataArray):\n",
-    "        data.to_netcdf(\n",
-    "            new_file,\n",
-    "            encoding={\n",
-    "                var: {\"compression\": \"gzip\", \"compression_opts\": 9}\n",
-    "                for var in list(data.coords.keys())\n",
-    "                + [data.name if data.name else \"__xarray_dataarray_variable__\"]\n",
-    "            },\n",
-    "            engine=\"h5netcdf\",\n",
-    "            invalid_netcdf=True,\n",
-    "        )\n",
-    "    elif isinstance(data, xr.Dataset):\n",
-    "        data.to_netcdf(\n",
-    "            new_file,\n",
-    "            encoding={\n",
-    "                var: {\"compression\": \"gzip\", \"compression_opts\": 9}\n",
-    "                for var in data.data_vars\n",
-    "            },\n",
-    "        )\n",
-    "    else:\n",
-    "        data.to_netcdf(new_file, engine=\"h5netcdf\")\n"
+    "    save_compressed(data, new_file)"
    ]
   }
  ],
