--- a/make_test_data.ipynb
+++ b/make_test_data.ipynb
@@ -253,6 +253,7 @@
     "    (\"lxy.ibw\", \"lxy.h5\"),\n",
     "    (\"core.pxt\", \"core.h5\"),\n",
     "    (\"f_005_S001.pxt\", \"5.h5\"),\n",
+    "    (\"f_008_R0_S001.pxt\", \"8.h5\"),\n",
     "]\n",
     "\n",
     "for old, new in files:\n",
@@ -329,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
