--- a/make_test_data.ipynb
+++ b/make_test_data.ipynb
@@ -316,7 +316,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "erlab",
+   "display_name": "erlabnew",
    "language": "python",
    "name": "python3"
   },
@@ -330,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
